file structural changings

--- a/Flyer.htm
+++ b/Flyer.htm
@@ -13,10 +13,14 @@
         .mdl-layout__header{
             color: black;
         }
+
+        .image{
+            height: 1000px;
+            padding: 10px;
+        }
     </style>
 
 
-<!-- Always shows a header, even in smaller screens. -->
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
   <header class="mdl-layout__header mdl-color--yellow-500">
     <div class="mdl-layout__header-row">
@@ -42,13 +46,13 @@
     </nav>
   </div>
   <main class="mdl-layout__content">
-    <div class="page-content"><!-- Your content goes here --></div>
+    <div class="page-content">
+        <img src="Cock/Digitalisierung.png" class="image"></img>
+        <img src="Cock/Geld Joggen.png"class="image">
+        <img src="Cock/Gratis Snacks.png"class="image">
+        <img src="Cock/Immer n schritt voraus.png" class="image">
+    </div>
   </main>
 </div>
-
-    
-    </h2>
-    <h2>Partei programm</h2>
-
 </body>
 </html>
