--- a/Flyer.htm
+++ b/Flyer.htm
@@ -15,8 +15,8 @@
         }
 
         .image{
-            height: 1000px;
-            padding: 10px;
+            width: 47.7%;
+            padding: 1%;
         }
     </style>
 
