Changes for addition
Adding the Credit Tab for better stability

--- a/Parteiprogramm.html
+++ b/Parteiprogramm.html
@@ -45,7 +45,8 @@
         <a class="mdl-navigation__link" href="Parteiprogramm.html" style="color: black">Parteiprogramm</a>
         <a class="mdl-navigation__link" href="Flyer.htm" style="color: black">Flyer/Plakate</a>
         <a class="mdl-navigation__link" href="" style="color: black">Koalition</a>
-        </nav>
+        <a class="mdl-navigation__link" href="credit.html" style="color: black">Credits</a>
+    </nav>
     </div>
     <main class="mdl-layout__content">
         <div class="page-content">
