--- a/Flyer.htm
+++ b/Flyer.htm
@@ -43,6 +43,7 @@
       <a class="mdl-navigation__link" href="Parteiprogramm.html" style="color: black">Parteiprogramm</a>
       <a class="mdl-navigation__link" href="Flyer.htm" style="color: black">Flyer/Plakate</a>
       <a class="mdl-navigation__link" href="" style="color: black">Koalition</a>
+      <a class="mdl-navigation__link" href="credit.html" style="color: black">Credits</a>
     </nav>
   </div>
   <main class="mdl-layout__content">
