--- a/credit.html
+++ b/credit.html
@@ -4,8 +4,75 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <style>
+        .mdl-layout__header{
+            color: black;
+        }
+
+        .image{
+            width: 95%;
+            padding: 1%;
+            object-fit: cover;
+        }
+
+        .texti {
+            text-align: center;
+            font-size: large;
+        }
+        .bilder-container {
+            display: flex;
+            justify-content: space-around;
+            align-items: flex-start;
+            margin: 0 auto;
+
+        }
+    </style>
 </head>
 <body>
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+  <header class="mdl-layout__header mdl-color--yellow-500">
+    <div class="mdl-layout__header-row">
+      <!-- Title -->
+      <a class="mdl-layout-title" href="index.html" style="color:black">Freies Liberales Deutschland</span>
+      <!-- Add spacer, to align navigation to the right -->
+      <div class="mdl-layout-spacer"></div>
+      <!-- Navigation. We hide it in small screens. -->
+      <nav class="mdl-navigation mdl-layout--large-screen-only">
+        <a class="mdl-navigation__link" href="" style="color: black"></a>
+        <a class="mdl-navigation__link" href="" style="color: black"></a>
+        <a class="mdl-navigation__link" href="" style="color: black"></a>
+        <a class="mdl-navigation__link" href="" style="color: black"></a>
+      </nav>
+    </div>
+  </header>
+  <div class="mdl-layout__drawer">
+    <span class="mdl-layout-title">FLD Übersicht</span>
+    <nav class="mdl-navigation">
+      <a class="mdl-navigation__link" href="Parteiprogramm.html" style="color: black">Parteiprogramm</a>
+      <a class="mdl-navigation__link" href="Flyer.htm" style="color: black">Flyer/Plakate</a>
+      <a class="mdl-navigation__link" href="" style="color: black">Koalition</a>
+      <a class="mdl-navigation__link" href="credit.html" style="color: black">Credits</a>
+    </nav>
+  </div>
+  <main class="mdl-layout__content">
+    <div class="page-content">
+        <div class="bilder-container">
+            <figure>
+                <img src="Cock/IMG_1611.png" class="image">
+                <figcaption class="texti">Til Freitag, Frontend, Backend, Schreiber</figcaption>
+            </figure>
+
+            <figure>
+                <img src="Cock/13d6560d-a850-4c85-86a0-714874c2d520.JPG" class="image">
+                <figcaption class="texti">Miro A. Adomat, Frontend, Schreiber</figcaption>
+            </figure>
+        </div>
+    </div>
+  </main>
+</div>
     
 </body>
 </html>
