--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
     </nav>
   </div>
   <main class="mdl-layout__content">
-    <div class="page-content"><!-- Your content goes here --></div>
+    <div class="page-content">      
+      <div style="border: solid black  3px; background-color: yellow; text-align: center; padding: 30px; margin: 30px; width: 40px‚;">
+      <h3>Sicherung der Altersvorsorge </h3>
+      <h5>Einer der größten Probleme in Deutschland ist die Rente/Altersvorsorge deswegen...</h5>
+      <a class="mdl-navigation__link" href="Parteiprogramm.html" style="color: black">Mehr Lesen... </a></div>
   </main>
 </div>
 
