--- a/Parteiprogramm.html
+++ b/Parteiprogramm.html
@@ -21,6 +21,14 @@
             line-height: normal;
             padding: 10px;
         }
+        .ueberschrift {
+            color: black;
+            font-size: xx-large;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            font-display: block;
+            line-height: normal;
+            padding: 10px;
+        }
     </style>
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
     <header class="mdl-layout__header mdl-color--yellow-500">
