--- a/Parteiprogramm.html
+++ b/Parteiprogramm.html
@@ -57,7 +57,7 @@
     </div>
     <main class="mdl-layout__content">
         <div class="page-content">
-            <H1 class="font">Unser Parteiprogramm</H1>
+            <H1 class="ueberschrift">Unser Parteiprogramm</H1>
             <h2 class="font">Sicherung der Altersvorsorge</h2>
             <h3 class="font">Einer der größten probleme in Deutschland ist die Rente/Altersvorsorge deswegen behandeln wir dies das Hauptthema. Wir sind für eine gesetzlichen Aktienrente die langfristig das Rentenproblem Lösen soll, Es soll nicht sinnlos in eine Rentenkasse in der das Geld fast nur cash rumliegt eingezahlt werden, sondern das jeder netto Steuerzahler in eine Diversifizierten Welt etf sparen bei (7% pa. Inflations bereinigt). Um Hohe Renditen zuerzielen. Das wird zum Renten beginn Definitiv ausreichen um den Rest des Lebens ohne Geld sorgen auszuleben. Vergleich: Das Aktuelle Rentensystem kann nicht weiter funktionieren. Die geburtenraten sind niedrig und Mit den Generationen kommen immer mehr Rentner dazu, was dazu führt des immer mehr Geld von den Netto-steuerzahler genommen wird und Für die verschwendet wird. unser system ist dazu, das jeder für seine Rente verantwortlich ist und das die steuerzahler stark entlastet werden.</h3>
             <h1></h1>
