--- a/Parteiprogramm.html
+++ b/Parteiprogramm.html
@@ -63,6 +63,9 @@
             <h1></h1>
             <h2 class="font">Bekämpfung der Armut</h2>
             <h3 class="font">Aktuell gibt es ein Armutsproblem in Deutschland. Leute haben keine Lust auf Arbeit. Viele Leben auf der Straße. Deswegen wollen wir Arbeit attraktiver machen. Und wie? Die Steuerlast soll aufgehoben werden und die Steuern werden gesenkt. Um umzusetzen wollen wir überflüssige Ämter abschalten, unnötige ausgaben ins Ausland stoppen. Außerdem hilft unser Rentensystem auch dabei die steuern zu senken. (Alternative) Bürgergeld: Mittlerweile lohnt sich für einige dies am meisten. Kein aufwand und dabei ein guten lohn mit gratis Wohnung, sowas ist keine Lösung fürs land und kann langfristig nicht funktionieren. Da nichts gezahlt wird und aus den Kassen Genommen wird. Außerdem kann von den gesparten Geld auch in obdachlosen Hilfe wie Unterkünfte investiert werden. Und so mehr leute zu arbeiten motiviert werden so mehr kann man den benachteiligten helfen.</h3>
+            <h2 class="font">Förderung der Gleichberechtigung</h2>
+            <h3 class="font">Wir sind außerdem für eine Allgemeine Gleichberechtigung die nicht durch strafen oder drohung gefördet werden soll sondern den leuten bereits in jungen jahren beibegracht werden durch prävenzion oder erziehung dass alle menschen gleich sind und niemand mehr oder weniger wert ist
+     
         </div>
     </main>
     </div>
