--- a/credit.html
+++ b/credit.html
@@ -62,7 +62,7 @@
         <div class="bilder-container">
             <figure>
                 <img src="Cock/IMG_1611.png" class="image">
-                <figcaption class="texti">Til Freitag, Frontend, Backend, Schreiber. she/her</figcaption>
+                <figcaption class="texti">Til Freitag, Frontend, Backend, Schreiber.</figcaption>
             </figure>
 
             <figure>
