--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <h3  style="text-align: center;
   border: solid black 3px;
   background-color: yellow;
-  padding: 30px; margin: 30px; width: 40px‚">flyer/plakate <br> <a class="mdl-navigation__link" href="Flyer.htm" style="color: black; text-align: center; ">Mehr ansehen</a> </h3>
+  padding: 30px; margin: 30px; width: 40px‚">Flyer / Plakate <br> <a class="mdl-navigation__link" href="Flyer.htm" style="color: black; text-align: center; ">Mehr ansehen</a> </h3>
   
   <div style="width: 1%;">
     <im src="Cock/Digitalisierung.png"></im>
