--- a/Parteiprogramm.html
+++ b/Parteiprogramm.html
@@ -53,6 +53,7 @@
         <a class="mdl-navigation__link" href="Flyer.htm" style="color: black">Flyer/Plakate</a>
         <a class="mdl-navigation__link" href="" style="color: black">Koalition</a>
         <a class="mdl-navigation__link" href="credit.html" style="color: black">Credits</a>
+        <a class="mdl-navigation__link" href="Spenden.html" style="color: black">Spenden</a>
     </nav>
     </div>
     <main class="mdl-layout__content">
