--- a/Spenden.html
+++ b/Spenden.html
@@ -11,28 +11,10 @@
         .mdl-layout__header{
             color: black;
         }
-
-        .image{
-            width: 95%;
-            padding: 1%;
-            object-fit: cover;
-        }
-
-        .texti {
-            text-align: center;
-            font-size: large;
-        }
-        .bilder-container {
-            display: flex;
-            justify-content: space-around;
-            align-items: flex-start;
-            margin: 0 auto;
-
-        }
     </style>
 </head>
 <body>
-    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
   <header class="mdl-layout__header mdl-color--yellow-500">
     <div class="mdl-layout__header-row">
       <!-- Title -->
@@ -59,21 +41,10 @@
     </nav>
   </div>
   <main class="mdl-layout__content">
-    <div class="page-content">
-        <div class="bilder-container">
-            <figure>
-                <img src="Cock/IMG_1611.png" class="image">
-                <figcaption class="texti">Til Freitag, Frontend, Backend, Schreiber.</figcaption>
-            </figure>
-
-            <figure>
-                <img src="Cock/13d6560d-a850-4c85-86a0-714874c2d520.JPG" class="image">
-                <figcaption class="texti">Miro A. Adomat, Frontend, Schreiber</figcaption>
-            </figure>
-        </div>
-    </div>
-  </main>
-</div>
-    
+    <div class="page-content">      
+      <div style="border: solid black  3px; background-color: yellow; text-align: center; padding: 30px; margin: 30px; width: 40px‚;">
+      <h3>Sicherung der Partei</h3>
+      <h5>Damit dieses Projekt weiterhin existieren kann, würden wir darauf appelieren zu spenden.</h5>
+      <a class="mdl-navigation__link" href="https://www.paypal.me/tilfreitag" style="color: black">Hier Spenden..</a></div>
 </body>
 </html>
