--- a/Spenden.html
+++ b/Spenden.html
@@ -45,6 +45,6 @@
       <div style="border: solid black  3px; background-color: yellow; text-align: center; padding: 30px; margin: 30px; width: 40px‚;">
       <h3>Sicherung der Partei</h3>
       <h5>Damit dieses Projekt weiterhin existieren kann, würden wir darauf appelieren zu spenden.</h5>
-      <a class="mdl-navigation__link" href="https://www.paypal.me/tilfreitag" style="color: black">Hier Spenden..</a></div>
+      <a class="mdl-navigation__link" href="https://www.paypal.me/tilfreitag" style="color: blue; font-size: large;">Hier Spenden..</a></div>
 </body>
 </html>
