--- a/Parteiprogramm.html
+++ b/Parteiprogramm.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 </head>
-<body>
+<body style="background-color: rgb(252, 255, 190);">
     <style>
         .mdl-layout__header{
             color: black;
@@ -20,21 +20,35 @@
             font-display: block;
             line-height: normal;
             padding: 10px;
+            text-align: center;
+            margin: 50px;
+            line-height: 100%;
         }
         .ueberschrift {
             color: black;
-            font-size: xx-large;
+            font-size: 40px;
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             font-display: block;
             line-height: normal;
             padding: 10px;
+            text-align: center;
+        }
+
+        .unterueberschrift {
+            color: yellowgreen;
+            font-size: 30px;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            font-display: block;
+            line-height: 0px;
+            padding: 10px;
+            text-align: center;
         }
     </style>
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
     <header class="mdl-layout__header mdl-color--yellow-500">
         <div class="mdl-layout__header-row">
         <!-- Title -->
-        <a class="mdl-layout-title" href="index.html" style="color:black">Freies Liberales Deutschland</span>
+        <a class="mdl-layout-title" href="index.html" style="color:black; text-decoration: none">Freies Liberales Deutschland</span>
         <!-- Add spacer, to align navigation to the right -->
         <div class="mdl-layout-spacer"></div>
         <!-- Navigation. We hide it in small screens. -->
@@ -59,14 +73,13 @@
     <main class="mdl-layout__content">
         <div class="page-content">
             <H1 class="ueberschrift">Unser Parteiprogramm</H1>
-            <h2 class="font">Sicherung der Altersvorsorge</h2>
+            <h2 class="unterueberschrift">Sicherung der Altersvorsorge</h2>
             <h3 class="font">Einer der größten Probleme in Deutschland ist die Rente/Altersvorsorge. Deswegen behandeln wir dies als Hauptthema. Wir sind für eine gesetzlichen Aktienrente die langfristig das Rentenproblem Lösen soll. Es soll nicht sinnlos in eine Rentenkasse, in der das Geld fast nur cash rumliegt, eingezahlt werden, sondern das jeder Netto Steuerzahler in eine Diversifizierten Welt ETF spart bei 7% pa. Inflations bereinigt. Um Hohe Renditen zuerzielen. Das wird zum Rentenbeginn Definitiv ausreichen um den Rest des Lebens ohne Geld sorgen auszuleben. Vergleich: Das Aktuelle Rentensystem kann nicht weiter funktionieren. Die Geburtenraten sind niedrig und mit den Generationen kommen immer mehr Rentner dazu, was dazu führt das immer mehr Geld von den Netto-Steuerzahler genommen wird und für die verschwendet wird. Unser System ist dazu, das jeder für seine Rente verantwortlich ist und das die Steuerzahler stark entlastet werden.</h3>
             <h1></h1>
-            <h2 class="font">Bekämpfung der Armut</h2>
+            <h2 class="unterueberschrift">Bekämpfung der Armut</h2>
             <h3 class="font">Aktuell gibt es ein Armutsproblem in Deutschland. Leute haben keine Lust auf Arbeit. Viele Leben auf der Straße. Deswegen wollen wir Arbeit attraktiver machen. Und wie? Die Steuerlast soll aufgehoben werden und die Steuern werden gesenkt. Um umzusetzen wollen wir überflüssige Ämter abschalten, unnötige ausgaben ins Ausland stoppen. Außerdem hilft unser Rentensystem auch dabei die steuern zu senken. (Alternative) Bürgergeld: Mittlerweile lohnt sich für einige dies am meisten. Kein aufwand und dabei ein guten lohn mit gratis Wohnung, sowas ist keine Lösung fürs land und kann langfristig nicht funktionieren. Da nichts gezahlt wird und aus den Kassen Genommen wird. Außerdem kann von den gesparten Geld auch in obdachlosen Hilfe wie Unterkünfte investiert werden. Und so mehr leute zu arbeiten motiviert werden so mehr kann man den benachteiligten helfen.</h3>
-            <h2 class="font">Förderung der Gleichberechtigung</h2>
+            <h2 class="unterueberschrift">Förderung der Gleichberechtigung</h2>
             <h3 class="font">Wir sind außerdem für eine Allgemeine Gleichberechtigung die nicht durch strafen oder drohung gefördet werden soll sondern den leuten bereits in jungen jahren beibegracht werden durch prävenzion oder erziehung dass alle menschen gleich sind und niemand mehr oder weniger wert ist
-     
         </div>
     </main>
     </div>
