--- a/credit.html
+++ b/credit.html
@@ -31,12 +31,12 @@
         }
     </style>
 </head>
-<body>
+<body style="background-color: rgb(252, 255, 190)">
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
   <header class="mdl-layout__header mdl-color--yellow-500">
     <div class="mdl-layout__header-row">
       <!-- Title -->
-      <a class="mdl-layout-title" href="index.html" style="color:black">Freies Liberales Deutschland</span>
+      <a class="mdl-layout-title" href="index.html" style="color:black; text-decoration: none">Freies Liberales Deutschland</span>
       <!-- Add spacer, to align navigation to the right -->
       <div class="mdl-layout-spacer"></div>
       <!-- Navigation. We hide it in small screens. -->
