--- a/Flyer.htm
+++ b/Flyer.htm
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 </head>
-<body>
+<body style="background-color: rgb(252, 255, 190)">
     <style>
         .mdl-layout__header{
             color: black;
@@ -25,7 +25,7 @@
   <header class="mdl-layout__header mdl-color--yellow-500">
     <div class="mdl-layout__header-row">
       <!-- Title -->
-      <a class="mdl-layout-title" href="index.html" style="color:black">Freies Liberales Deutschland</span>
+      <a class="mdl-layout-title" href="index.html" style="color:black; text-decoration: none;">Freies Liberales Deutschland</span>
       <!-- Add spacer, to align navigation to the right -->
       <div class="mdl-layout-spacer"></div>
       <!-- Navigation. We hide it in small screens. -->
