--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5795114678692881" crossorigin="anonymous"></script>
-    <meta name="google-adsense-account" content="ca-pub-5795114678692881">
 </head>
-<body>
+<body style="background-color: rgb(252, 255, 190)">
     <style>
         .mdl-layout__header{
             color: black;
@@ -23,7 +21,7 @@
   <header class="mdl-layout__header mdl-color--yellow-500">
     <div class="mdl-layout__header-row">
       <!-- Title -->
-      <a class="mdl-layout-title" href="index.html" style="color:black">Freies Liberales Deutschland</span>
+      <a class="mdl-layout-title" href="index.html" style="color:black; text-decoration: none;">Freies Liberales Deutschland</span>
       <!-- Add spacer, to align navigation to the right -->
       <div class="mdl-layout-spacer"></div>
       <!-- Navigation. We hide it in small screens. -->
