--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
         .mdl-layout__header{
             color: black;
         }
+        .Nachrichten {
+            border: solid black 3px;
+            background-color: yellow;
+            text-align: center;
+            padding: 30px;
+            margin: 30px;
+            width: 40px‚;
+        }
     </style>
 
 
@@ -46,21 +54,16 @@
   <main class="mdl-layout__content">
     <div class="page-content">      
       <div style="border: solid black  3px; background-color: yellow; text-align: center; padding: 30px; margin: 30px; width: 40px‚;">
-      <h3>Sicherung der Altersvorsorge </h3>
-      <h5>Einer der größten Probleme in Deutschland ist die Rente/Altersvorsorge deswegen...</h5>
-      <a class="mdl-navigation__link" href="Parteiprogramm.html" style="color: black">Mehr Lesen... </a></div>
-  
-  <h3  style="text-align: center;
-  border: solid black 3px;
-  background-color: yellow;
-  padding: 30px; margin: 30px; width: 40px‚">Flyer / Plakate <br> <a class="mdl-navigation__link" href="Flyer.htm" style="color: black; text-align: center; ">Mehr ansehen</a> </h3>
-  
-  <div style="width: 1%;">
-    <im src="Cock/Digitalisierung.png"></im>
-  </div>
-
+        <h3>Sicherung der Altersvorsorge </h3>
+        <h5>Einer der größten Probleme in Deutschland ist die Rente/Altersvorsorge deswegen...</h5>
+        <a class="mdl-navigation__link" href="Parteiprogramm.html" style="color: black">Mehr Lesen... </a></div>
+        <h3 style="text-align: center; border: solid black 3px; background-color: yellow; padding: 30px; margin: 30px; width: 40px‚">Flyer / Plakate <br> <a class="mdl-navigation__link" href="Flyer.htm" style="color: black; text-align: center; ">Mehr ansehen</a> </h3>
+      </div>
+      <div class="Nachrichten">
+        <h3>Neuigkeiten</h3>
+        <h5>Hier werden bald Neuigkeiten stehen.</h5>
+      </div>
+    </div>
     </main>
-</div>
-
 </body>
 </html>
